Add styles.css; minor update to README and index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <title>FizzBuzz Calculator</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="stylesheet" href="./styles.css">
 
 </head>
 
@@ -20,7 +21,7 @@
     </p>
 
     <input id="fizzbuzz-input" placeholder="Enter a number">
-    <button type="submit" id="submit">Submit</button>
+    <button type="submit" id="submit">Convert</button>
 
     <div>
         <p>Result: </p>
